Updated Experience Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  	 gtag('config', 'G-57MYQSYNVF');
 	</script>
-    <title>Santhosh Senthil</title>
+    <title>Santhosh S</title>
 
 </head>
 
@@ -92,7 +92,7 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-                <a aria-label="Open Santhosh resume in a new tab" href="#resume" target="_blank" onclick="window.open('https://drive.google.com/file/d/1sZlkhpySYr-XLRAnbrTnFogdH3-IDxj7/view?usp=sharing')"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+                <a aria-label="Open Santhosh resume in a new tab" href="#resume" target="_blank" onclick="window.open('https://drive.google.com/file/d/14S9OeU1-qUt0OU2kLorzSr8tQO1Ha-hT/view?usp=sharing')"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
             </li>
         </ul>
     </nav>
@@ -101,7 +101,7 @@
     <nav class="hide-on-large only trigger z-depth-1">
         <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
         <div class="name-title">
-            <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Santhosh Senthil</a><span class="black-text">Frontend Developer</span>
+            <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Santhosh S</a><span class="black-text">Frontend Developer</span>
         </div>
     </nav>
 
@@ -150,7 +150,7 @@
 
                             <p> </p>
                             <h1>Hi,👋I 'm
-                                <br>Santhosh Senthil.
+                                <br>Santhosh S.
                             </h1>
                             <h4>Problem Solver| Web Developer| Front End Developer| Competitive Programmer</h4>
                         </div>
@@ -188,15 +188,15 @@
                     </h2>
                 </blockquote>
                 <p>
-                    I'm second year Computer Science Engineering undergraduate student at Velammal Engineering College. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do. I have worked on technologies like Python, MySQL, HTML5, CSS, Java, C++
-                    during my weekends.</p>
+                    Passionate and driven Computer Science graduate with a strong foundation in coding and problem-solving.</p>
                 <p>
                     <ul>
-                        <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, PHP</li>
-                        <li><b>Databases:</b> MySQL</li>
-                        <li><b>Libraries:</b> Matplotlib</li>
+                        <li><b>Languages:</b> Java, C, C++, Javascript, MERN Stack, Python, HTML, CSS, Spring Boot.</li>
+                        <li><b>Databases:</b> MySQL, Google Firebase, MongoDB.</li>
+                        <li><b>Mobile development platforms:</b> Android.</li>
                         <li><b>Platforms:</b> Hackerrank, Codechef,Skillrack, Leetcode</li>
-                        <li><b>Tools & Technologies:</b> GitHub, VSCode</li>
+                        <li><b>Tools & Technologies:</b> Git, Agile methodologies, Visual Studio Code, REST APIs.
+                        </li>
                     </ul>
 
                 </p>
@@ -212,24 +212,88 @@
                     <div class="card-content ">
                         <div class="row ">
                             <div class="col s12 m2 ">
+                                <a href="https://www.tnautoskills.org/  " target="_blank "><img alt="tnautoskills logo" src="tnautoskills.png" class="responsive-img center-block " /></a>
+                            </div>
+
+                            <div class="col s12 m10 ">
+                                <p>
+                                    <span class="card-title "><a href="https://drive.google.com/file/d/1ztT_NolT82azzjByUiNlqfGfJ-ubpBRN/view?usp=sharing " target="_blank "
+                      class="teal-text hoverline ">TN AutoSkills</a></span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="role brown-text text-darken-2 ">Technical Consultant Intern</div>
+                        <ul>
+                            <li>
+                                Utilized software development skills to optimize applications and enhance operational efficiency. </li>
+                            <li>
+                                Engaged in collaborative efforts to deliver innovative technical solutions and improve process efficiency.
+                            </li>
+                            <li>
+                                <b>Tools:</b> JIRA, Excel, Mysql, Canva, Google Analytics
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-action ">
+                        <span>March 2024 - May 2024 | Chennai</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container ">
+                <div class="card ">
+                    <div class="card-content ">
+                        <div class="row ">
+                            <div class="col s12 m2 ">
+                                <a href="https://www.vbind.com/  " target="_blank " ><img alt="Vbind logo " src="vbind.jpeg" class="responsive-img center-block " /></a>
+                            </div>
+
+                            <div class="col s12 m10 ">
+                                <p>
+                                    <span class="card-title "><a href="https://drive.google.com/file/d/1Aes8Dg7MVejUs6-o2dXt6bmDg_ZRqZhN/view?usp=sharing" target="_blank "
+                      class="teal-text hoverline ">VBIND Innovation Private Limited</a></span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="role brown-text text-darken-2 ">Developer Intern</div>
+                        <ul>
+                            <li>
+                                Collaborated with senior developers to implement Agile development methodologies, significantly boosting team productivity.</li>
+                            <li>
+                                Worked on multiple projects, which enhanced my skills in multitasking, prioritization, and time management. </li>
+                            <li>
+                                <b>Tools:</b> HTML, CSS, Javascript, Mysql, MERN
+                            </li>
+                            </ul>
+                    </div>
+                    <div class="card-action ">
+                        <span>April 2022 - August 2022 | Chennai</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container ">
+                <div class="card ">
+                    <div class="card-content ">
+                        <div class="row ">
+                            <div class="col s12 m2 ">
                                 <a href="https://www.thesparksfoundationsingapore.org/  " target="_blank "><img alt="The Sparks Foundation logo " src="the-sparks-foundation.png" class="responsive-img center-block " /></a>
                             </div>
 
                             <div class="col s12 m10 ">
                                 <p>
-                                    <span class="card-title "><a href="https://www.thesparksfoundationsingapore.org/ " target="_blank "
+                                    <span class="card-title "><a href="https://drive.google.com/file/d/1tctMXuTjS4gVMX3a3snRcldOa0JK-oTG/view?usp=sharing" target="_blank "
                       class="teal-text hoverline ">The Sparks Foundation</a></span>
                                 </p>
                             </div>
                         </div>
-                        <div class="role brown-text text-darken-2 ">Web Developer</div>
+                        <div class="role brown-text text-darken-2 ">Web Developer Intern</div>
                         <ul>
                             <li>
                                 Created a Basic Banking website which has the following specs. </li>
                             <li>
                                 Start with creating data in Mysql database for upto 10 customers. Customer table will have basic fields such as name, email, current balance etc.,
                             </li>
-                            <li>Transfers table will record all transfers happened.</li>
                             <li>Flow: Homepage--..--View all Customers--..--Select and view one customer--..--Transfer Money. No login page and No User creation.
                             </li>
                             <li>
@@ -238,10 +302,11 @@
                         </ul>
                     </div>
                     <div class="card-action ">
-                        <span>Oct 2021 (1 Month) | Singapore</span>
+                        <span>Oct 2021 (1 Month) | Singapore (Virtual)</span>
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- Fourth Section: Projects -->
